# sitemap-gen

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  TEMPLATE.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  document.yml  lint.yml  release.yml
benches/: sitemap_benchmark.rs
examples/: error_example.rs  lib_example.rs  main_example.rs  sitemap_example.rs  urls.txt  utils_example.rs
search.desc/sitemap_gen/: sitemap_gen-desc-0-.js
sitemap_gen/: all.html  index.html  sidebar-items.js  type.SitemapResult.html
sitemap_gen/error/: enum.SitemapError.html  index.html  sidebar-items.js  type.SitemapResult.html
sitemap_gen/prelude/: index.html
sitemap_gen/sitemap/: enum.ChangeFreq.html  fn.convert_date_format.html  fn.create_site_map_data.html  index.html  sidebar-items.js  struct.SiteMapData.html  struct.Sitemap.html
sitemap_gen/utils/: constant.DEFAULT_CHANGE_FREQ.html  constant.MAX_URLS.html  fn.create_cli.html  fn.format_date.html  fn.generate_sitemap.html  fn.is_valid_url.html  fn.normalize_urls.html  fn.read_urls_from_file.html  fn.write_output.html  index.html  sidebar-items.js
src/: error.rs  lib.rs  main.rs  sitemap.rs  utils.rs
src/sitemap_gen/: error.rs.html  lib.rs.html  sitemap.rs.html  utils.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
type.impl/core/result/: enum.Result.js
